Fixed some spacing on the About Me page.

--- a/src/App.css
+++ b/src/App.css
@@ -432,11 +432,11 @@ h2 {
   width: 80%; 
   margin: auto; 
   background-color: rgb(211,211,211, 0.6);
-  padding: 10px;
+  padding: 20px;
 }
 
 .about-content p {
-  font-size: 25px;
+  font-size: 27px;
 }
 
 .course-buttons a {
